# project_starter_pack

./: README.md
project_executable/: CMakeLists.txt  GUIDELINE.md  README.md
project_executable/approximath/src/: main.cpp
project_executable/doc/: Doxyfile
project_executable/src/: approximath.cpp  main.cpp
project_external_project/: CMakeLists.txt
project_external_project/approximath/src/: approximath.cpp  main.cpp
project_external_project/src/: main.cpp
project_fetch_content/: CMakeLists.txt
project_fetch_content/include/approximath/: approximath.hpp
project_fetch_content/src/: approximath.cpp
project_library/: .gitignore  CMakeLists.txt
project_library/approximath/src/: approximath.cpp
project_library/data/: dataset_0.txt
project_library/doc/: Doxyfile
project_library/include/approximath/: approximath.hpp
project_library/test/: CMakeLists.txt  test_1.cpp
project_library_header_only/: CMakeLists.txt  README.md
project_library_header_only/approximath/inc/: approximath.hpp
project_library_header_only/test/: test_1.cpp  test_2.cpp
project_pybind11/: CMakeLists.txt
project_pybind11/doc/: pybind11-stubgen.py
project_pybind11/include/approximath/: approximath.hpp
project_pybind11/src/: approximath.cpp
project_pybind11/test/: CMakeLists.txt  test_1.py  test_2.py
